# ytFetch

./: .gitignore  LICENSE  README-pypi.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/ytfetch/: cli.py  utils.py
