[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytfetch"
version = "1.0.0"
description = "A wrapper for yt-dlp with custom simple fetching flags"
authors = [
    { name = "voidsnax", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.3.4",
]

[project.scripts]
ytfetch = "ytfetch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ytfetch"]