[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytfetch"
version = "1.1.4"
description = "A wrapper for yt-dlp with custom simple fetching flags"
authors = [
    { name = "voidsnax" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2025.12.08",
    "colorama"
]

keywords = ["youtubedownloader", "converter", "h264", "mp3", "playlist"]

[project.urls]
Homepage = "https://github.com/voidsnax/ytFetch"

[project.scripts]
ytfetch = "ytfetch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ytfetch"]